<resources>
    <string name="app_name">血压健康助手</string>
    <string name="List_name">连接你的血压计</string>
    <string name="Calendar_name">选择日期</string>
    <string name="Login">登录账号，有更多功能哦</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">点击登录，更多功能</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="none_paired">No Device Has Been Paired</string>
    <string name="scanning">正在搜索...</string>
    <string name="scan">搜索蓝牙设备</string>
    <string name="close">断开连接</string>
    <string name="connecting">连接中...</string>
    <string name="device_already_paired">配对成功</string>
    <string name="pairing_device">配对中...</string>
    <string name="fail_to_pair">配对失败</string>
    <string name="none_found">no device found</string>
    <string name="Bluetooth_connect">蓝牙连接</string>
    <string name="bt_not_enabled_leaving">为了您的血压计能正常使用，请打开蓝牙</string>
    <string name="bt_not_enabled">为了连接您的血压计，请使用有蓝牙功能的手机</string>
    <string name="bt_not_connect">等等！先用蓝牙连接您的血压计</string>

    <string name="NBP_normal">正常</string>
    <string name="NBP_normalHigh">正常高值</string>
    <string name="NBP_High">高血压</string>
    <string name="NBP_Low">偏低</string>

    <string name="Data_Empty">要输入完整数据哦</string>
    <string name="Data_Not_Found">没有找到当天数据╭(╯^╰)╮</string>

    <string name="menu_user">家庭成员</string>
    <string name="menu_record">历史记录</string>
    <string name="menu_home">测量血压</string>
    <string name="menu_help">帮助</string>
    <string name="menu_analyse">健康曲线</string>
    <string name="menu_setting">设置</string>
</resources>
