<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_record"
            android:title="@string/menu_record" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_analyse"
            android:icon="@drawable/ic_analyse"
            android:title="@string/menu_analyse" />
    </group>

    <item android:title="设置">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/menu_setting" />
        </menu>
    </item>

</menu>
