<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nbpanalyzer.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_record"
        android:name="com.example.nbpanalyzer.view.RecordFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.nbpanalyzer.view.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_analyse"
        android:name="com.example.nbpanalyzer.view.AnalyseFragment"
        android:label="@string/menu_analyse"
        tools:layout="@layout/fragment_analyse" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.nbpanalyzer.view.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.nbpanalyzer.view.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>